--- a/resources/views/auth/login.ejs
+++ b/resources/views/auth/login.ejs
@@ -5,7 +5,10 @@
         </div>
       
         <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-          <form class="space-y-6" action="#" method="POST">
+          <form  class="space-y-6" action="/login" method="POST">
+            <% if(messages.error) { %>
+              <span class="text-red-500 text-sm"><%=messages.error%></span>
+            <% } %>
             <div>
               <label for="email" class="block text-sm font-medium leading-6 px-2 text-gray-900">Email address</label>
               <div class="mt-2">
@@ -26,7 +29,7 @@
             </div>
       
             <div>
-              <button type="" class=" btn-primary w-full justify-center rounded-full  px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Log In</button>
+              <button type="submit" class=" btn-primary w-full justify-center rounded-full bg-orange-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-orange-700">Log In</button>
             </div>
           </form>
       
