--- a/resources/views/auth/register.ejs
+++ b/resources/views/auth/register.ejs
@@ -5,19 +5,23 @@
         </div>
       
         <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-          <form class="space-y-6" action="#" method="POST">
-            
+          <form action= "/register" method="POST" class="space-y-6" action="#" method="POST">
+            <% if(messages.error) { %>
+               <span class="text-red-500 text-sm"><%=messages.error%></span>
+             <% } %>
             <div>
-                <label for="username" class="block text-sm font-medium leading-6 px-2 text-gray-900"> Name</label>
+                <label for="username" class="block text-sm font-medium leading-6 px-2 text-gray-900"> 
+                  Name
+                </label>
                 <div class="mt-2">
-                  <input id="username" name="username" type="text" autocomplete="username" placeholder=" Enter your name" class="block w-full rounded-md border-0 p-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                  <input id="username" name="name" value="<%= messages.name%>" type="text" autocomplete="username" placeholder=" Enter your name" class="block w-full rounded-md border-0 p-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
             </div>
 
             <div>
               <label for="email" class="block text-sm font-medium leading-6 px-2 text-gray-900">Email address</label>
               <div class="mt-2">
-                <input id="email" name="email" type="email" autocomplete="email" placeholder=" Enter your email" class="block w-full rounded-md border-0 p-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                <input id="username" name="email" value="<%= messages.email%>" type="email" autocomplete="email" placeholder=" Enter your email" class="block w-full rounded-md border-0 p-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
               </div>
             </div>
       
@@ -34,7 +38,8 @@
             </div>
       
             <div>
-              <button type="" class=" btn-primary w-full justify-center rounded-full  px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign In</button>
+              <button type="submit" class="btn-primary w-full justify-center rounded-md bg-orange-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-orange-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Register</button>
+              <!-- <button type="submit" class=" btn-primary w-full justify-center rounded-full  px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Register</button> -->
             </div>
           </form>
       
