--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -14,11 +14,11 @@
     
      <nav class="container mx-auto px-11 py-4 flex items-center justify-between">
             <div>
-                <img src="/img/logo.png" alt="logo">
+                <a href="/"><img src="/img/logo.png" alt="logo"></a> 
             </div>
             <div>
                  <ul class="flex items-center">
-                    <li class="ml-6"><a href="#">Menu</a></li>
+                    <li class="ml-6"><a href="/">Menu</a></li>
                     <li class="ml-6"><a href="#">Offers</a></li>
                     <% if(user) { %>
                     <li class="ml-6">
