--- a/resources/views/admin/orders.ejs
+++ b/resources/views/admin/orders.ejs
@@ -1,4 +1,4 @@
-<section class="orders light-section">
+<section class="orders light-section py-10 px-10">
     <div class="container mx-auto pt-12">
         <h1 class="font-bold text-lg mb-4">All orders</h1>
         <table class="w-full table-auto bg-white">
@@ -10,7 +10,7 @@
                     <th class="px-4 py-2 text-left">Address</th>
                     <th class="px-4 py-2 text-left">status</th>
                     <th class="px-4 py-2 text-left">Placed at</th>
-                    <th class="px-4 py-2 text-left">Payment Status</th>
+                    <!-- <th class="px-4 py-2 text-left">Payment Status</th> -->
                 </tr>
             </thead>
             <tbody id="orderTableBody">
