--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -8,6 +8,7 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
      <script src="https://cdn.tailwindcss.com"></script>
+     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
      <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
             <div>
                  <ul class="flex items-center">
                     <li class="ml-6"><a href="/">Menu</a></li>
-                    <li class="ml-6"><a href="#">Offers</a></li>
+                    <!-- <li class="ml-6"><a href="#">Offers</a></li> -->
                     <% if(user) { %>
                     <li class="ml-6">
                         <form id="logout" action="/logout" method="POST"></form>
@@ -36,6 +37,8 @@
             </div>
      </nav>
      <%- body %>
+     <footer></footer>
+     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/app.js"></script>
 </body>
 </html>
